2023-08-21T01:03:58Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5920729091 # 1101
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-21
* notice: last 14d: unq all: 3 21
* notice: prev accum: outdated-unq outdated-all / unq all: 592 944 / 609 968
* notice: next accum: outdated-unq outdated-all / unq all: 594 947 / 609 968
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-08-06] / []

2023-08-20T08:16:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5916281253 # 1099
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-20
* notice: last 14d: unq all: 4 23
* notice: prev accum: outdated-unq outdated-all / unq all: 592 944 / 608 967
* notice: next accum: outdated-unq outdated-all / unq all: 592 944 / 609 968
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-08-06 2023-08-20]

2023-08-19T16:17:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5912383415 # 1097
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-19
* notice: last 14d: unq all: 4 23
* notice: prev accum: outdated-unq outdated-all / unq all: 592 944 / 607 966
* notice: next accum: outdated-unq outdated-all / unq all: 592 944 / 608 967
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-08-19]

2023-08-18T08:17:54Z: