@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-21T01:03:58Z",
+  "timestamp" : "2023-08-21T08:18:54Z",
   "count_outdated" : 947,
   "uniques_outdated" : 594,
-  "count" : 968,
-  "uniques" : 609,
+  "count" : 969,
+  "uniques" : 610,
   "clones" : [
     {
       "timestamp": "2023-08-08T00:00:00Z",
@@ -106,6 +106,15 @@
     },
     {
       "timestamp": "2023-08-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-21T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
