@@ -1,5 +1,5 @@
 {
-  "count": 21,
+  "count": 22,
   "uniques": 3,
   "clones": [
     {
@@ -59,6 +59,11 @@
     },
     {
       "timestamp": "2023-08-20T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-08-21T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
