@@ -1,3 +1,12 @@
+2023-08-21T08:18:54Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5923758700 # 1102
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-21
+* notice: last 14d: unq all: 3 22
+* notice: prev accum: outdated-unq outdated-all / unq all: 594 947 / 609 968
+* notice: next accum: outdated-unq outdated-all / unq all: 594 947 / 610 969
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-08-21]
+
 2023-08-21T01:03:58Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5920729091 # 1101
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-21
